--- a/pim-tool-front/src/app/sidebar/sidebar.component.html
+++ b/pim-tool-front/src/app/sidebar/sidebar.component.html
@@ -18,7 +18,8 @@
 
   >
     <a class="nav-link"
-       style="cursor: pointer"
+       [routerLinkActive]="'router-link-active'"
+       style="cursor: pointer; color: gray"
        routerLink="/project/new">Project</a>
   </li>
   <li class="nav-item">
