--- a/pim-tool-front/src/app/project/project.component.html
+++ b/pim-tool-front/src/app/project/project.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid row">
-  <div class="sidebar col-md-2 d-flex justify-content-end" style="background: #D5D5D5">
+  <div class="sidebar col-md-2 d-flex justify-content-end bg-light" style="border-right: 1px solid #ced4da">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="col-md-10 bg-transparent">
+  <div class="col-md-10 bg-light">
     <router-outlet></router-outlet>
   </div>
 </div>
