--- a/pim-tool-front/src/app/sidebar/sidebar.component.html
+++ b/pim-tool-front/src/app/sidebar/sidebar.component.html
@@ -1,6 +1,5 @@
-<ul class="nav flex-column">
-  <li class="nav-item"
-  >
+<ul class="nav flex-column mt-4 mr-4">
+  <li class="nav-item">
     <h5>
       <a class="nav-link pb-3"
          routerLink="/project/project-list"
@@ -14,9 +13,7 @@
        style="color: black">
       New</a>
   </h5>
-  <li class="nav-item"
-
-  >
+  <li class="nav-item">
     <a class="nav-link"
        [routerLinkActive]="'router-link-active'"
        style="cursor: pointer; color: gray"
@@ -28,5 +25,4 @@
   <li class="nav-item">
     <a class="nav-link" style="color: gray" routerLink="supplier">Supplier</a>
   </li>
-
 </ul>
