--- a/pim-tool-front/src/app/project/project-list/project-list.component.html
+++ b/pim-tool-front/src/app/project/project-list/project-list.component.html
@@ -1,33 +1,41 @@
-<div class="row">
+<div class="row mt-4 ml-4">
   <div class="col-lg-12">
     <h2>Projects List</h2>
     <hr>
-    <div class="container-fluid">
-      <form class="form-row mb-5">
-        <div class="col-md-4">
-          <input type="text" placeholder="Project number name, customer name" class="form-control col-md-11"
-                 id="projectNameSearch">
-        </div>
-        <div class="col-md-2">
-          <select type="text" class="form-control col-md-8" id="projectStatusSearch">
-            <option class="disabled">Project Status</option>
-          </select>
-        </div>
-        <div class="col-md-6">
-          <button class="btn btn-primary mr-5">Search Project</button>
-          <button class="btn ml-5 text-primary">Reset Search</button>
-        </div>
-      </form>
-      <table class="table table-hover table-bordered">
+    <form class="form-row mb-5" [formGroup]="searchForm" (ngSubmit)="onSubmit()">
+      <div class="col-md-4">
+        <input type="text" placeholder="Project number, name, customer name" class="form-control col-md-11"
+               id="projectNameSearch" formControlName="projectInfo" name="projectInfo">
+      </div>
+      <div class="col-md-2">
+        <select type="text" class="form-control col-md-8" id="projectStatusSearch" formControlName="status"
+                name="status">
+          <option class="disabled" value="">Project Status</option>
+          <option *ngFor="let s of status" [ngValue]="s">{{ s }}</option>
+        </select>
+      </div>
+      <div class="col-md-6">
+        <button class="btn btn-primary mr-5" type="submit">Search Project</button>
+        <button class="btn ml-5 text-primary" type="button" (click)="onReset()">Reset Search</button>
+      </div>
+    </form>
+    <ng-container *ngIf="!isNotFound">
+      <table class="table table-borderless table-hover">
         <thead>
         <tr>
           <th scope="col-1"></th>
-          <th scope="col-auto">Number</th>
+          <th scope="col-auto">
+            <div class="d-flex justify-content-end">Number</div>
+          </th>
           <th scope="col-4">Name</th>
           <th scope="col-auto">Status</th>
           <th scope="col-auto">Customer</th>
-          <th scope="col-auto">Start Date</th>
-          <th scope="col-1">Delete</th>
+          <th scope="col-auto">
+            <div class="d-flex justify-content-center">Start Date</div>
+          </th>
+          <th scope="col-1">
+            <div class="d-flex justify-content-center">Delete</div>
+          </th>
         </tr>
         </thead>
         <tbody>
@@ -35,44 +43,61 @@
           <tr>
             <th scope="row">
               <div class="d-flex justify-content-center">
-                <input type="checkbox" class="mt-2">
+                <input type="checkbox" class="mt-1" style="width: 15px; height: 15px"
+                       [disabled]="isDisabled(project.status)" (click)="onChecked($event, project.id)">
               </div>
             </th>
-            <td>{{project.projectNumber}}</td>
+            <td routerLink="/project/edit/{{project.id}}" id="projectNumber">
+              <div class="d-flex justify-content-end">{{project.projectNumber}}</div>
+            </td>
             <td>{{project.projectName}}</td>
             <td>{{project.status}}</td>
             <td>{{project.customer}}</td>
-            <td>{{project.startDate}}</td>
+            <td>
+              <div class="d-flex justify-content-center">{{project.startDate}}</div>
+            </td>
             <td>
               <div *ngIf="project.status === 'New'" class="d-flex justify-content-center">
-                <i class="bi bi-trash3-fill" style="color: red"></i>
+                <a (click)="onDelete(project.id)"><i class="bi bi-trash3-fill" style="color: red; cursor: pointer"></i></a>
               </div>
             </td>
           </tr>
         </ng-container>
-
+        <tr id="info-selected" id="tr-end" *ngIf="listCheckedProjectId.length > 1">
+          <td class="table-info" colspan="7">
+            <div class="d-flex justify-content-sm-between">
+              <span class="text-primary">{{this.listCheckedProjectId.length}} items selected</span>
+              <span class="text-danger">
+                  <a style="color: red; cursor: pointer" (click)="onDeleteListProject()">delete selected items <i
+                    class="bi bi-trash3-fill"></i></a>
+                </span>
+            </div>
+          </td>
+        </tr>
         </tbody>
       </table>
+    </ng-container>
+    <h1 *ngIf="isNotFound" class="d-flex justify-content-center">Project is not found</h1>
 
-      <nav class="d-flex justify-content-end">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          <li class="page-item active"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <!--      <nav class="d-flex justify-content-end">-->
+    <!--        <ul class="pagination">-->
+    <!--          <li class="page-item">-->
+    <!--            <a class="page-link" href="#" aria-label="Previous">-->
+    <!--              <span aria-hidden="true">&laquo;</span>-->
+    <!--              <span class="sr-only">Previous</span>-->
+    <!--            </a>-->
+    <!--          </li>-->
+    <!--          <li class="page-item active"><a class="page-link" href="#">1</a></li>-->
+    <!--          <li class="page-item"><a class="page-link" href="#">2</a></li>-->
+    <!--          <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+    <!--          <li class="page-item">-->
+    <!--            <a class="page-link" href="#" aria-label="Next">-->
+    <!--              <span aria-hidden="true">&raquo;</span>-->
+    <!--              <span class="sr-only">Next</span>-->
+    <!--            </a>-->
+    <!--          </li>-->
+    <!--        </ul>-->
+    <!--      </nav>-->
+
   </div>
 </div>
