--- a/pim-tool-front/src/app/sidebar/sidebar.component.html
+++ b/pim-tool-front/src/app/sidebar/sidebar.component.html
@@ -9,8 +9,7 @@
 
   </li>
   <h5 class="nav-item">
-    <a class="nav-link pb-3"
-       style="color: black">
+    <a class="nav-link pb-3">
       {{ 'sideBar.new' | translate}}</a>
   </h5>
   <li class="nav-item">
